--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -22,7 +22,13 @@ jobs:
       - name: Setup .NET 8 SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.x"
+          dotnet-version: "8.0.4xx"
+
+      - name: Show dotnet info
+        shell: powershell
+        run: |
+          dotnet --version
+          dotnet --info
 
       - name: Install Inno Setup
         shell: powershell
