--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -58,12 +58,16 @@ jobs:
               "python\\Lib\\site-packages\\argostranslate\\__init__.py",
               "python\\Lib\\site-packages\\argostranslate\\translate.py",
               "python\\Lib\\site-packages\\argostranslate\\package.py",
+              "python\\Lib\\site-packages\\ctranslate2\\__init__.py",
+              "python\\Lib\\site-packages\\sentencepiece\\__init__.py",
               "offline-site-packages.zip"
             )
             foreach ($rel in $keyFiles) {
               $path = Join-Path $runtimeRoot $rel
               "$rel => $(Test-Path $path)" | Out-File -FilePath (Join-Path $debugDir "offline-runtime-key-files.txt") -Encoding utf8 -Append
             }
+            $ct2Pyd = Get-ChildItem -Path (Join-Path $runtimeRoot "python\\Lib\\site-packages\\ctranslate2") -Filter "*.pyd" -File -ErrorAction SilentlyContinue | Select-Object -First 1
+            "python\\Lib\\site-packages\\ctranslate2\\*.pyd => $([bool]$ct2Pyd)" | Out-File -FilePath (Join-Path $debugDir "offline-runtime-key-files.txt") -Encoding utf8 -Append
           } else {
             "offline-runtime not found: $runtimeRoot" | Out-File -FilePath (Join-Path $debugDir "offline-runtime-tree.txt") -Encoding utf8
           }
